# OpenGL-project

./: .gitignore  CMakeLists.txt  README.md
Other/: README.md  example.glsl
Shaders/Testing/: standard.glsl  triangle.glsl
include/: Camera.hpp  Game.hpp  Renderable.hpp  Renderer.hpp  Triangle.hpp
include/Functionalities/: EBO.hpp  Shader.hpp  VAO.hpp  VBO.hpp
include/ImGUI/: ImGui_Implement.hpp
include/Renderables/: Circle.hpp  Square.hpp  Triangle.hpp
include/glad/: glad.h
src/: Camera.cpp  Game.cpp  Renderable.cpp  Renderer.cpp  main.cpp
src/ImGUI/: ImGui_Implement.cpp
src/Misc/: errorReporting.cpp  glad.c
src/Renderables/: Circle.cpp  Square.cpp  Triangle.cpp
unit_tests/: Units.cpp
